package com.game;

public enum Direction {
    north,
    south,
    east,
    west
}