package com.game;

public class Empty extends Entity {

    public Empty(){
        this.variant = Variant.empty;
    }
}
