package com.game;

public abstract class Entity {
    protected Variant variant;

    public Variant getVariant() {
        return this.variant;
    }
}
