package com.game;

public enum Variant {
    wall,
    pacman,
    empty
}
