package com.game;

public class Wall extends Entity {
    

    public Wall (Variant variant) {
        this.variant = variant;
    }
}
